--- a/src/DemoApplication/project.json
+++ b/src/DemoApplication/project.json
@@ -13,8 +13,7 @@
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
     "Microsoft.AspNet.Razor": "4.0.0-rc1-final",
-    "Microsoft.AspNet.Razor.Runtime": "4.0.0-rc1-final",
-    "TagHelpers": "1.0.0-*"
+    "Microsoft.AspNet.Razor.Runtime": "4.0.0-rc1-final"
   },
 
   "commands": {
