--- a/src/DemoApplication/project.json
+++ b/src/DemoApplication/project.json
@@ -13,7 +13,11 @@
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
     "Microsoft.AspNet.Razor": "4.0.0-rc1-final",
-    "Microsoft.AspNet.Razor.Runtime": "4.0.0-rc1-final"
+    "Microsoft.AspNet.Razor.Runtime": "4.0.0-rc1-final",
+    "Serilog.Framework.Logging": "1.0.0-rc1-final-10078",
+    "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
+    "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
+    "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
   },
 
   "commands": {
